--- a/html/css/main.css
+++ b/html/css/main.css
@@ -4,21 +4,29 @@ html, body, div, select, input, article, p, h1 {
 }
 
 h2, h3, h4, h5, h6 {
-	margin: 15px 5px;
+	margin: 5px;
 	padding: 0;
 }
 
 .stretch {
 	background-color: #eeeeee;
+	
 	margin: 0;
+	margin-bottom: 10px;
+	
 	padding: 0;
 	text-align: center;
 	width: 100%;
 }
 
 .center {
-	max-width: 80%;
-	margin: 40px auto;
+	display: flex;
+	justify-content: center;
+}
+
+#content {
+	display: flex;
+	max-width: 100%;
 }
 
 .outlined {
@@ -27,12 +35,14 @@ h2, h3, h4, h5, h6 {
 }
 
 #input {
-	position: relative;
-	display: block;
+	display: flex;
+	flex-direction: column;
+	align-items: space-between;
+
+	margin: 10px;
 	
 	max-width: 300px;
 	min-width: 100px;
-	height: 150px;
 }
 
 #input select {
@@ -40,13 +50,19 @@ h2, h3, h4, h5, h6 {
 }
 
 #plot {
-	background-color: #efefef;
 	display: block;
-	float: right;
+	
+	margin: 10px;
+	
+	background-color: #efefef;
 	min-height: 100px;
 	min-width: 100px;
+	
+	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .teamInput {
 	background-color: #efefef;
+	margin-bottom: 10px;
 }
