--- a/html/css/main.css
+++ b/html/css/main.css
@@ -22,11 +22,18 @@ h2, h3, h4, h5, h6 {
 .center {
 	display: flex;
 	justify-content: center;
+	align-items: center;
+	margin-top: 40px;
 }
 
 #content {
 	display: flex;
-	max-width: 100%;
+	max-width: 750px;
+}
+
+#topSpace {
+	display: block;
+	height: 25%;
 }
 
 .outlined {
